# sigmod2018

./: .gitignore  README.md
data_facts/scripts/: data_metrics.py  joins_filters_counter.py  metrics.py  parsing_tests.py  queries_metrics.py
dataurus/: CMakeLists.txt  CheckSums.cpp  Creates.cpp  Filter.cpp  Joiner.cpp  LICENSE  Parser.cpp  Query2SQL.cpp  QueryPlan.cpp  README.md  Relation.cpp  Utils.cpp  cpu_mapping.cpp  generator.cpp  harness.cpp  package.sh  parallel_radix_join.cpp  parallel_radix_join_64.cpp  run.sh  runTestHarnessPublic.sh
dataurus/JobScheduler/: checksum_job.cpp  checksum_job.h  checksum_job_64.cpp  checksum_job_64.h  create_job.cpp  create_job.h  create_job_64.cpp  create_job_64.h  defn.h  filter_job.cpp  filter_job.h  job.h  job_master.h  job_scheduler.h  js_master.h  main_job.cpp  main_job.h  queryFill_job.cpp  queryFill_job.h
dataurus/include/: Joiner.hpp  Parser.hpp  QueryPlan.hpp  Relation.hpp  Utils.hpp  barrier.h  cpu_mapping.h  generator.h  parallel_radix_join.h  prj_params.h  table_t.hpp  task_queue_64.h  tuple_buffer.h  tuple_buffer_64.h  types.h  types_64.h
quick-start-package/: CMakeLists.txt  Joiner.cpp  Parser.cpp  Query2SQL.cpp  QueryGraph.cpp  QueryPlan.cpp  README  RadixJoin.cpp  Relation.cpp  Utils.cpp  compile.sh  functions.cpp  harness.cpp  parallel_radix_join.cpp  radiki_join.cpp  table_t.cpp  treegen.cpp
quick-start-package/Joiner_ver1.0/: Makefile  a.out  join  joiner.cpp  joiner.hpp  joiner_main.cpp
quick-start-package/execution_plan/: Makefile
quick-start-package/execution_plan/include/: functions.hpp  header.hpp
quick-start-package/execution_plan/src/: functions.cpp  main.cpp  treegen.cpp
quick-start-package/include/: Joiner.hpp  Parser.hpp  QueryGraph.hpp  QueryPlan.hpp  RadixJoin.hpp  Relation.hpp  Utils.hpp  functions.hpp  header.hpp  header_NEW.hpp  parallel_radix_join.h  prj_params.h  table_t.hpp  table_t.hpp.gch  tuple_buffer.h  types.h
quick-start-package/radix/: a.out  main.c  prj_params.h  radix.h  tuple_buffer.h
quick-start-package/test/: CMakeLists.txt  TestParser.cpp  TestRelation.cpp  main.cpp
quick-start-package/workloads/small/: r0.sql  r1.sql  r10.sql  r11.sql  r12.sql  r13.sql  r2.sql  r3.sql  r4.sql  r5.sql  r6.sql  r7.sql  r8.sql  r9.sql  small.result  small.work  small.work.sql
